# dns-320l_GPL

./: D-Link GPL Written Offer.HTML  GPL_License  LICENSE.txt  Readme.TXT  Readme.txt  firmware_description.HTML
dns-320l_GPL/: build_fw  xcp.sh
dns-320l_GPL/LPRng-3.8.10/: ABOUT-NLS.LPRng  CHANGES  COPYRIGHT  CREATE_CONFIGURE  INSTALL  Makefile  Makefile.in  README  README.ports  STANDARD_configuration  UPDATE  VERSION  acconfig.h  acinclude.m4  aclocal.m4  build.sh  config.h  config.h.in  config.status  configure  configure.in  init.bsdi.sh  init.linux.sh  init.redhat.sh  lpd.perms  lpd.perms.in  mkinstalldirs  postinstall.bsdi.sh  postinstall.freebsd.sh  postinstall.generic.sh  postinstall.linux.sh  postinstall.solaris.sh  printcap
dns-320l_GPL/LPRng-3.8.10/DISTRIBUTIONS/: Makefile,v
dns-320l_GPL/LPRng-3.8.10/DISTRIBUTIONS/FreeBSD-4.ports.sysutils.LPRng/: Makefile  Makefile.build  files-pkg-message  pkg-message  pkg-plist
dns-320l_GPL/LPRng-3.8.10/DISTRIBUTIONS/RPM.RedHat/: LPRng.spec  Makefile
dns-320l_GPL/LPRng-3.8.10/DISTRIBUTIONS/Solaris.pkg/: Makefile
dns-320l_GPL/LPRng-3.8.10/HOWTO/: LPRng-HOWTO.html  LPRng-HOWTO.sgml  Makefile  Makefile.in  collateindex.pl  genindex.sgml
dns-320l_GPL/LPRng-3.8.10/HOWTO/LPRng-HOWTO-Multipart/: abnormalterm.htm  accountingref.htm  ah.htm  aix.htm  allowusersetting.htm  append-z.htm  appletalk.htm  appsocket.htm  auth.htm  authref.htm  bannerprinting.htm  bk.htm  chainingfilters.htm  checkfornonprintable.htm  checkpc.htm  classpriority.htm  cm.htm  configfile.htm  controllingprintqueue.htm  debugging.htm  defaultrmrp.htm  destinations.htm  exitcodes.htm  f37.htm  faq.htm  faqref.htm  filteroptions.htm  filters.htm  forcefqdnhostname.htm  forcelocalhost.htm  i11496.htm  ifhp.htm  index.htm  installation.htm  introduction.htm  jobcompletion.htm  jobcopies.htm  jobfileformatconversion.htm  jobfiles.htm  jobremoval.htm  (+174 more)
dns-320l_GPL/LPRng-3.8.10/PrintingCookbook/source/: Cookbook.sgml
dns-320l_GPL/LPRng-3.8.10/PrintingCookbook/source/images/: Makefile
dns-320l_GPL/LPRng-3.8.10/TESTSUPPORT/: Makefile  filter.sh  lpd.conf.proto
dns-320l_GPL/LPRng-3.8.10/UTILS/: atalkprint  decode_args_with_perl  decode_args_with_perl.in  fixupdate  fixupdate.in  lpq_in_perl  lpq_in_perl.in  lprm_in_perl  lprm_in_perl.in  make_lpd_conf  make_lpd_conf.in  ncpprint  smbprint
dns-320l_GPL/LPRng-3.8.10/intl/: Makefile  Makefile.in
dns-320l_GPL/LPRng-3.8.10/man/: Makefile  Makefile.in  cancel.n  checkpc.n  lp.n  lpbanner.n  lpc.n  lpd.conf.n  lpd.n  lpd.perms.n  lpf.n  lpq.n  lprm.n  lpstat.n  monitor.n  printcap.n
dns-320l_GPL/LPRng-3.8.10/po/: LPRng.pot  Makefile  Makefile.in  POTFILES  cat-id-tbl.c  fr.po
dns-320l_GPL/LPRng-3.8.10/src/: Makefile  Makefile.in  acct  fixid  psbanner  psbanner.in
dns-320l_GPL/LPRng-3.8.10/src/AUTHENTICATE/: sclient.c  sserver.c
dns-320l_GPL/LPRng-3.8.10/src/common/: accounting.c  checkpc.c  child.c  controlword.c  copyright.c  debug.c  errormsg.c  fileopen.c  gethostinfo.c  getopt.c  getprinter.c  getqueue.c  globmatch.c  initialize.c  krb5_auth.c  linelist.c  linksupport.c  lockfile.c  lpbanner.c  lpc.c  lpd.c  lpd_control.c  lpd_dispatch.c  lpd_jobs.c  lpd_logger.c  lpd_rcvjob.c  lpd_remove.c  lpd_secure.c  lpd_status.c  lpf.c  lpq.c  lpq.c.rej  lpr.c  lprm.c  lpstat.c  md5.c  merge.c  monitor.c  permission.c  plp_snprintf.c  (+11 more)
dns-320l_GPL/LPRng-3.8.10/src/include/: accounting.h  checkpc.h  child.h  control.h  copyright.h  debug.h  errorcodes.h  errormsg.h  fileopen.h  gethostinfo.h  getopt.h  getprinter.h  getqueue.h  globmatch.h  initialize.h  krb5_auth.h  license.h  linelist.h  linksupport.h  lockfile.h  lp.h  lpc.h  lpd.h  lpd_control.h  lpd_dispatch.h  lpd_jobs.h  lpd_logger.h  lpd_rcvjob.h  lpd_remove.h  lpd_secure.h  lpd_status.h  lpq.h  lpr.h  lprm.h  lpstat.h  merge.h  patchlevel.h  permission.h  plp_snprintf.h  portable.h  (+10 more)
dns-320l_GPL/Linux-PAM-0.99.7.1/: .gitignore  xbuild.sh
dns-320l_GPL/Perl/: NOTES.txt
dns-320l_GPL/aMule-2.2.6/: Compilation.flags  Makefile  build.sh  build_amule.txt  config.h  config.status  xbuild.sh
dns-320l_GPL/acl-2.2.47/: aclocal.m4
dns-320l_GPL/afp_module/: Readme.txt  afp
dns-320l_GPL/attr-2.4.46/: .gitignore  xbuild.sh
dns-320l_GPL/audiostreamer/: README  xbuild.sh  xcurl-config  xml2-config  xxml-config
dns-320l_GPL/avahi-0.6.30/: Makefile.in  aclocal.m4  build.sh  clean.sh  configure  cp.sh  installfile.sh  needlib.sh  xbuild.sh
dns-320l_GPL/boost_1_44_0/: build.sh  user-config.jam  xbuild.sh
dns-320l_GPL/boost_1_55_0/: xbuild.sh
dns-320l_GPL/busybox-1.11.2/: .config  .config.old  .config.ori  Makefile  build.sh
dns-320l_GPL/busybox-1.20.2/: xbuild.sh
dns-320l_GPL/bzip2-1.0.6/: Makefile  xbuild.sh
dns-320l_GPL/cdrkit-1.1.11/: build.sh  clean.sh  installfile.sh  needlib.sh  xbuild.sh
dns-320l_GPL/cgic205/: Makefile  build.sh  cgic.c  cgic.h  cgictest.c  xbuild.sh
dns-320l_GPL/chardetect/: Makefile  build.sh  impl.cpp  nsCharSetProber.h  nsUniversalDetector.cpp  (+3 more)
dns-320l_GPL/iTunes_server/package/mt-daapd-svn-1696/admin-root/lib-js/script.aculo.us/: Makefile.am  Makefile.in
dns-320l_GPL/inotify-tools-3.13/src/: Makefile  Makefile.am  Makefile.in  Makefile.roy  filter.h  inotify_amule  inotify_amule.c  inotify_itune.c  inotify_upnp.c  inotifybt.c  inotifywait.c  media_type.h
dns-320l_GPL/quota-tools-3.17/: Changelog  Makefile  Makefile.in  README.gettext  README.ldap-support  README.mailserver  build.sh  bylabel.c  bylabel.h  clean.sh  common.c  common.h  config.status  configure  configure.in  convertquota  convertquota.8  convertquota.c  dqblk_rpc.h  dqblk_v1.h  dqblk_v2.h  dqblk_xfs.h  edquota  edquota.8  edquota.c  etquota.c  installfile.sh  mntopt.h  needlib.sh  pot.c  pot.h  quot  quot.8  quot.c  quot.h  quota  quota.1  quota.c  quota.h  quota_nld.8  (+59 more)
dns-320l_GPL/quota-tools-3.17/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
dns-320l_GPL/quota-tools-3.17/doc/: quotadoc.sgml  quotas-1.eps  quotas.preformated
dns-320l_GPL/quota-tools-3.17/po/: fr.mo  fr.po  pl.mo  pl.po  pl.po.orig  pl.po.rej
(+23514 files in other folders)
